--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "numpy>=1.24.0",
     "scipy>=1.10.0",
     "pandas>=2.0.0",
+    "scikit-learn>=1.7.2",
     "scikit-image>=0.21.0",
     "opencv-python>=4.8.0",
     "spectral>=0.23.0",
