--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,9 @@ dev = [
     "black>=23.0.0",
     "ruff>=0.0.270",
     "mypy>=1.3.0",
-    "sphinx>=7.0.0",
-    "sphinx-rtd-theme>=1.2.0",
+    "mkdocs-material>=9.5.0",
+    "mkdocstrings[python]>=0.24.0",
+    "mkdocs-jupyter>=0.24.0",
     "ipykernel>=6.23.0",
     "jupyter>=1.0.0",
 ]
